Добавлен функционал назанчения аминистратора